timeline mobile version is good now

--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
 <!--Contact: josh@parade.events -->
 <html>
   <link href='./css/style.css' rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-
   <link href='./css/timeline.css' rel="stylesheet">
+
+  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   <link href='https://fonts.googleapis.com/css?family=Titillium+Web:400,200,300,600,700' rel='stylesheet' type='text/css'>
-  <!-- <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet"> -->
   <link href="https://cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
   <head>
       <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -23,7 +22,7 @@
       gtag('js', new Date());
       gtag('config', 'UA-118030210-1');
     </script>
-
+    <!-- End Google Analytics -->
 
       <title>Parade app</title>
   </head>
@@ -95,7 +94,7 @@
        <ul class="timeline" id="timeline">
       <li class="li complete">
         <div class="timestamp">
-          <span class="author"> Product Research</span>
+          <span class="author complete"> Product Research</span>
         </div>
         <div class="status">
           <h4>Spring 2018</h4>
@@ -103,7 +102,7 @@
       </li>
       <li class="li complete">
         <div class="timestamp">
-          <span class="author">MVP Created</span>
+          <span class="author complete">MVP Created</span>
         </div>
         <div class="status">
           <h4>April</h4>
@@ -295,10 +294,10 @@
 
         <h2 style="font-size: 50px;margin-bottom:10px;margin-top:15px">Follow us!</h2>
           <div>
-            <a style="text-decoration: none" href="http://instagram.com/parade_evts">
+            <a style="text-decoration: none" href="https://instagram.com/parade_evts">
               <img style="padding:5px;width:50px;height:50px"src='./assets/social/instagram.png'/>
             </a>
-            <a style="text-decoration: none" href="http://facebook.com/paradeeventsapp">
+            <a style="text-decoration: none" href="https://facebook.com/paradeeventsapp">
               <img style="padding:5px;width:50px;height:50px"src='./assets/social/facebook.png'/>
             </a>
           </div>
