moved google tracking to bottom of page for faster loading

--- a/index.html
+++ b/index.html
@@ -35,16 +35,6 @@
           }
       </script>
 
-      <!-- Global site tag (gtag.js) - Google Analytics -->
-      <script async src="https://www.googletagmanager.com/gtag/js?id=UA-118030210-1"></script>
-      <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-      gtag('config', 'UA-118030210-1');
-    </script>
-    <!-- End Google Analytics -->
-
       <title>Parade app</title>
   </head>
       <body onload='changeColor()'>
@@ -209,9 +199,9 @@
 
                     <p style="padding-bottom:15px;font-size:18px;">
                       Josh is a second year studying Computer Science/Cyber Operations.
-                      He hopes to leverage his experience managing both small and large clubs to
+                      He hopes to leverage his experience managing both small and large clubs at Northeastern to
                       create a useful platform for all students!  Josh is developing much of the Parade frontend,
-                      building some backend, and tackling side projects such as this website.
+                      building some backend, and tackling side projects (such as this website).
                   </p>
                     </div>
                 </div>
@@ -330,7 +320,15 @@
             </div>
 
         </div>
-
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-118030210-1"></script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'UA-118030210-1');
+      </script>
+      <!-- End Google Analytics -->
 
     </body>
 </html>
