--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                        src='./assets/app-download-buttons.png' />
                      </div>
                      <div class="stickRight">
-                          <img class='iphone' src='./assets/iphone-partial.png'>
+                          <img class='iphone' src='./assets/aoun-partial.png'>
                       </div>
                 </div>
 
