--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
                            experience!
                          </noscript>
                          <div class='logoAndName'>
-                           <img class='icon' style="width:auto;height:auto;padding-right:20px" src=./assets/icon.png />
-                           <span style='display: flex;flex-direction: column;padding-top:20px;padding-left:10px'>
-                              <img class='icon' style="width:auto;height:16%" src=./assets/parade_font_white.png />
-                              <h2 style="margin-top: 5px;line-height: 27px;font-size:26px;">An events app for Northeastern clubs.</h2>
-                            </span>
+                           <img class='icon' style="width:250px;height:250px;padding-right:20px" src=./assets/icon.png />
+                           <div class='paradeNameWithShortDescription'>
+                              <img class='icon' style="width:450px;height:139px" src=./assets/parade_font_white.png />
+                              <h2 style="margin-top: 5px;line-height: 27px;font-size:24px;">An events app for Northeastern clubs.</h2>
+                            </div>
                           </div>
                        </div>
                        <p class="firstPanelBody">
