--- a/index.html
+++ b/index.html
@@ -11,29 +11,8 @@
   <head>
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="description" content="An Events app for Northeastern University clubs. Available soon on Android and iOS.">
-      <meta name="keywords" content="iOS,Android,iPhone,App Store,Parade,Northeastern,RSVP,NU,NEU,events,clubs,students,student organizations,student orgs,Northeastern University,Boston,MA,app,application,calendar,events calendar,SGA,university,CS,discover,study">
+      <meta name="keywords" content="aoun,iOS,Android,iPhone,App Store,Parade,Northeastern,RSVP,NU,NEU,events,clubs,students,student organizations,student orgs,Northeastern University,Boston,MA,app,application,calendar,events calendar,SGA,university,CS,discover,study">
       <meta name="author" content="Josh Spicer,Carter Tune">
-
-      <script>
-        // Parade is an app full of color, so I couldn't just choose one!
-        // This function picks a random color from a whitelist of good colors.
-        // It then sets the right background color and all links to that color.
-        // function changeColor() {
-        //   // Color whitelist
-        //   var arr = ['#02A4D3'], '#b19cd9', '#66cdaa'];
-        //   var rand = Math.floor(Math.random() * arr.length);
-        //   var payload = arr[rand];
-        //   // Background
-        //   var elements = document.getElementsByClassName('prettyColor');
-        //   for (var i = 0; i < elements.length; i++) {
-        //     elements[i].style.backgroundColor = payload;
-        //   }
-        //   var fontElements = document.getElementsByClassName('prettyFontColor');
-        //   for (var i = 0; i < fontElements.length; i++) {
-        //     fontElements[i].style.color = payload;
-        //     }
-        //   }
-      </script>
 
       <title>Parade app</title>
   </head>
@@ -45,8 +24,8 @@
                   <div class='navBar'>
                       <!-- <img class='icon' src=./assets/icon.png /> -->
                       <span class='navBarElements'>
-                        <p style="padding-left: 18px;padding-top:7px;font-size:22px"><a href='#Details'>Details</a></p>
-                        <p style="padding-left: 13px;padding-top:7px;font-size:22px"><a href='#Contact'>Join The Parade!</a></p>
+                        <a href='#Details'>Details</a>
+                        <a style='margin-left: 25px' href='#Contact'>Join The Parade!</a>
                       </span>
                    </div>
                      <div class="stickLeft">
@@ -59,8 +38,8 @@
                          <div class='logoAndName'>
                            <img class='icon' style="width:250px;height:250px;padding-right:20px" src=./assets/icon.png />
                            <div class='paradeNameWithShortDescription'>
-                              <img class='icon' style="width:450px;height:139px" src=./assets/parade_font_white.png />
-                              <h2 style="margin-top: 5px;line-height: 27px;font-size:24px;">An events app for Northeastern clubs.</h2>
+                              <img class='paradeTitle' src=./assets/parade_font_white.png />
+                              <h2 style="margin-top: 8px;line-height: 27px;font-size:25.5px;">An events app for Northeastern clubs.</h2>
                             </div>
                           </div>
                        </div>
@@ -167,7 +146,7 @@
                   <div class="bio">
                     <img
                     class='headshot'
-                    src='https://avatars2.githubusercontent.com/u/23239924?s=400&v=4'
+                    src='./assets/faces/carter.png'
                     alt='carter' />
                     <div>
                       <!-- <a style="text-decoration: none" href="https://github.com/cartertune">
@@ -216,7 +195,7 @@
             <div class='bio'>
                   <img
                   class='headshot'
-                  src='https://scontent.fzty2-1.fna.fbcdn.net/v/t1.0-9/30581475_1010333789119321_222777960888361789_n.jpg?_nc_cat=0&oh=e8eb7375ec7f3396ba25bffd156e80ab&oe=5B63548F'
+                  src='./assets/faces/kathleen.jpg'
                   alt='kathleen' />
                   <div>
                     <!-- <a style="text-decoration: none" href="https://joshspicer.com/">
