--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                           </div>
                        </div>
                        <p class="firstPanelBody">
-                         Northeastern has <b>hundreds</b> of events each week.
+                         Northeastern has <strong>hundreds</strong> of events each week.
                          <br>Discover them with Parade.
                        </p>
                        <img
@@ -289,14 +289,14 @@
     </form>
   </div>
   <!--End mc_embed_signup-->
-
+        <!-- Thanks for the logos: https://www.iconsdb.com/white-icons/facebook-like-3-icon.html -->
         <h2 style="font-size: 50px;margin-bottom:10px;margin-top:15px">Follow us!</h2>
           <div>
             <a style="text-decoration: none" href="https://instagram.com/paradeapp">
-              <img style="padding:5px;width:50px;height:50px"src='./assets/social/instagram.png'/>
+              <img style="padding:5px;width:50px;height:50px"src='./assets/social/instagram-white.png'/>
             </a>
             <a style="text-decoration: none" href="https://facebook.com/paradeeventsapp">
-              <img style="padding:5px;width:50px;height:50px"src='./assets/social/facebook.png'/>
+              <img style="padding:5px;width:50px;height:50px"src='./assets/social/facebook-white.png'/>
             </a>
           </div>
 
