--- a/index.html
+++ b/index.html
@@ -161,6 +161,10 @@
 
               <div class='meetTheTeam'>
                 <div class='meetTheTeamRow'>
+                  <p>
+                     Are you a Northeastern student interested in joining the Parade dev team? 
+                    <a href="mailto:outreach@parade.events"> Reach out.</a>
+                  </p>
                   <div class="bio">
                     <img
                     class='headshot'
