spacing and added help wanted ad lol

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!-- <!DOCTYPE html> -->
 <!--Written for use by the creators of Parade: Carter Tune and Josh Spicer -->
-<!--Contact: josh<@>parade.events -->
+<!--Contact: josh<<@>>parade.events -->
 <html>
   <link href='./css/style.css' rel="stylesheet">
   <link href='./css/timeline.css' rel="stylesheet">
@@ -42,8 +42,8 @@
                   <div class='navBar'>
                       <!-- <img class='icon' src=./assets/icon.png /> -->
                       <span class='navBarElements'>
-                        <a href='#Details'>Details</a>
-                        <a style='margin-left: 25px' href='#Contact'>Join The Parade!</a>
+                        <a href='#Details' style='text-decoration: none'>Details</a>
+                        <a style='margin-left: 25px;text-decoration: none' href='#Contact'>Join The Parade!</a>
                       </span>
                    </div>
                      <div class="stickLeft">
@@ -54,7 +54,7 @@
                            experience!
                          </noscript>
                          <div class='logoAndName'>
-                           <img class='icon' style="width:250px;height:250px;padding-right:20px" src=./assets/icon.png />
+                           <img class='icon' style="width:250px;height:250px;padding-right:20px" src=./assets/RoundedIcon.png />
                            <div class='paradeNameWithShortDescription'>
                               <img class='paradeTitle' src=./assets/parade_font_white.png />
                               <h2 style="margin-top: 8px;line-height: 27px;font-size:25.5px;">An events app for Northeastern clubs.</h2>
@@ -70,9 +70,9 @@
                        class='appDownloadButtons'
                        src='./assets/app-download-buttons.png' />
                      </div>
-                     <div class="stickRight">
+                     <!-- <div class="stickRight"> -->
                           <img class='iphone' src='./assets/aoun-partial.png'>
-                      </div>
+                      <!-- </div> -->
                 </div>
 
             <!-- START SECOND PANEL -->
@@ -121,9 +121,9 @@
           <h4>April</h4>
         </div>
       </li>
-      <li class="li">
+      <li class="li complete">
         <div class="timestamp">
-          <span class="author">Alpha Testing</span>
+          <span class="author complete">Alpha Testing</span>
         </div>
         <div class="status">
           <h4>May</h4>
@@ -160,15 +160,9 @@
     <h2 class="prettyFontColor secondPanel" style="font-size:60px;margin-bottom:15px">Meet the Team.</h2>
 
               <div class='meetTheTeam'>
-                <!---
-                <p>
-                     Are you a Northeastern student interested in joining the Parade dev team? 
-                  </p>
-                    <a href="mailto:outreach@parade.events">Reach out.</a>
-                --->
-                 
+
                 <div class='meetTheTeamRow'>
-                  
+
                   <div class="bio">
                     <img
                     class='headshot'
@@ -195,10 +189,10 @@
                 <div class='bio'>
                     <img
                     class='headshot'
-                    src='https://joshspicer.com/assets/me/1.png'
+                    src='./assets/faces/josh.png'
                     alt='josh' />
                     <div>
-                      <a style="text-decoration: none" href="https://joshspicer.com/">
+                      <a style="text-decoration: none" href="http://joshspicer.com/">
                         <img style="padding:10px;width:30px;height:30px"src='./assets/social/website.png'/>
                       </a>
                       <a style="text-decoration: none" href="mailto:josh@parade.events">
@@ -274,10 +268,18 @@
               <p style="font-size:20px;margin-top:0px">
                 We're creating Parade for <i>you</i>. Whether you're a club president or new student,
                 let us know how we can make Parade better.
+              <!-- </p> -->
+              <!-- <p style="font-size:28px;margin-top:0px"> -->
+                <br><a href='mailto:ideas@parade.events'> <strong>Let us know!</strong></a>
               </p>
-              <p style="font-size:28px;margin-top:0px">
-                <a href='mailto:ideas@parade.events'>ideas@parade.events</a>
+
+              <h2 style="font-size: 50px;margin-bottom:15px">Looking for a Project?</h2>
+              <p style="font-size:20px;margin-top:0px">
+                  Are you a Northeastern student interested in joining the Parade <b>dev</b> team?
+                  <br><a href="mailto:outreach@parade.events"><strong>Reach out!</strong></a>
               </p>
+
+
               <h2 style="font-size: 50px;margin-bottom:15px">Stay informed!</h2>
               <p style="font-size:20px;margin-top:0px">
                 Join our mailing list for beta testing opportunities,
