add blog button to site

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
                   <div class='navBar'>
                       <!-- <img class='icon' src=./assets/icon.png /> -->
                       <span class='navBarElements'>
-                        <a href='#Details' style='text-decoration: none'>Details</a>
-                        <a style='margin-left: 25px;text-decoration: none' href='#Contact'>Join The Parade!</a>
+                        <a href='https://parade.events/blog' style='text-decoration: none;padding-right:20px'>Blog</a>
+                        <a style='text-decoration: none;  white-space: nowrap' href='#Contact'>Join The Parade!</a>
                       </span>
                    </div>
                      <div class="stickLeft">
@@ -66,7 +66,7 @@
                          <br>Discover them with Parade.
                        </p>
                        <img
-                       onclick="alert('Coming soon! Sign up for our mailing list below for more info!')"
+                       onclick="alert('Coming soon! Sign up for our mailing list BELOW to get an invite during our testing stage!')"
                        class='appDownloadButtons'
                        src='./assets/app-download-buttons.png' />
                      </div>
