--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
           <h4>May</h4>
         </div>
       </li>
-      <li class="li">
+      <li class="li complete">
         <div class="timestamp">
           <span class="author">Orientation Outreach</span>
         </div>
