--- a/404.html
+++ b/404.html
@@ -15,20 +15,25 @@
 {"@type":"WebPage","url":"http://localhost:4000/404.html","headline":"Parade Events","@context":"http://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/assets/main.css"><link type="application/atom+xml" rel="alternate" href="http://localhost:4000/feed.xml" title="Parade Events" /></head>
-<body><header class="site-header" role="banner">
+<body><header class="my-site-header" role="banner">
 
-  <div class="wrapper"><a class="site-title" rel="author" href="/">Parade Events</a><nav class="site-nav">
-        <input type="checkbox" id="nav-trigger" class="nav-trigger" />
-        <label for="nav-trigger">
-          <span class="menu-icon">
-            <svg viewBox="0 0 18 15" width="18px" height="15px">
-              <path d="M18,1.484c0,0.82-0.665,1.484-1.484,1.484H1.484C0.665,2.969,0,2.304,0,1.484l0,0C0,0.665,0.665,0,1.484,0 h15.032C17.335,0,18,0.665,18,1.484L18,1.484z M18,7.516C18,8.335,17.335,9,16.516,9H1.484C0.665,9,0,8.335,0,7.516l0,0 c0-0.82,0.665-1.484,1.484-1.484h15.032C17.335,6.031,18,6.696,18,7.516L18,7.516z M18,13.516C18,14.335,17.335,15,16.516,15H1.484 C0.665,15,0,14.335,0,13.516l0,0c0-0.82,0.665-1.483,1.484-1.483h15.032C17.335,12.031,18,12.695,18,13.516L18,13.516z"/>
-            </svg>
-          </span>
-        </label>
+  <div class="wrapper">
 
-        <div class="trigger"></div>
-      </nav></div>
+    <a class="site-title" rel="author" href="/">Parade Events</a>
+
+    <nav style="float: right">
+      <a class="site-title" style="font-size: 15px" rel="author" href="/">Home&nbsp;&nbsp;</a>
+
+      <a class="site-title" style="font-size: 15px" rel="author" href="https://parade.events/blog">&nbsp;Blog&nbsp;&nbsp;</a>
+
+      <a class="site-title" style="font-size: 15px" rel="author" href="mailto:outreach@parade.events">&nbsp;Contact</a>
+
+
+
+        </nav>
+
+
+  </div>
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
@@ -37,6 +42,13 @@
     margin: 10px auto;
     max-width: 800px;
     text-align: center;
+  }
+  .my-site-header {
+    border-top: 5px solid #47a2cf;
+    border-bottom: 1px solid #e8e8e8;
+    min-height: 55.95px;
+    position: relative;
+}
   }
   h1 {
     margin: 30px 0;
@@ -51,6 +63,7 @@
 
   <p>The link you're trying to reach likely <strong>requires the Parade app</strong> (available for iOS and Android).</p>
   <p>Try this link again on your smartphone  <strong>after</strong> logging into Parade!</p>
+  <p><a href="https://parade.events/"> << Go home</a></p>
 </div>
 
       </div>
