--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                   <div class='navBar'>
                       <!-- <img class='icon' src=./assets/icon.png /> -->
                       <span class='navBarElements'>
-                        <a href='https://parade.events/blog' style='text-decoration: none;padding-right:20px'>Blog</a>
+                        <a href='https://parade.events/blog' alt="Parade Blog" style='text-decoration: none;padding-right:20px'>Blog</a>
                         <a style='text-decoration: none;  white-space: nowrap' href='#Contact'>Join The Parade!</a>
                       </span>
                    </div>
@@ -137,9 +137,9 @@
           <h4>Summer</h4>
         </div>
       </li>
-      <li class="li">
+      <li class="li complete">
         <div class="timestamp">
-          <span class="author">Beta Testing</span>
+          <span class="author">Beta Phase/Invite Orgs to Join</span>
         </div>
         <div class="status">
           <h4>Late Summer</h4>
@@ -181,9 +181,9 @@
                     <h3 style="margin:0px">Developer</h3>
 
                     <p style="font-size:16px;">
-                      Carter is a Computer Science major and currently on co-op in New York!
-                      Carter is developing the Parade back end, writing some front end, and communicating
-                      with others to plan out future steps for Parade.
+                      Carter studies Computer Science and recently completed his first co-op at
+                      SelfMade in New York City. Carter is involved in all stages of product development and takes an
+                      active role in planning and outreach.
                   </p>
                 </div>
                 <div class='bio'>
@@ -192,7 +192,7 @@
                     src='./assets/faces/josh.png'
                     alt='josh' />
                     <div>
-                      <a style="text-decoration: none" href="http://joshspicer.com/">
+                      <a style="text-decoration: none" alt="joshspicer.com" href="https://joshspicer.com/">
                         <img style="padding:10px;width:30px;height:30px"src='./assets/social/website.png'/>
                       </a>
                       <a style="text-decoration: none" href="mailto:josh@parade.events">
@@ -204,10 +204,10 @@
                     <h3 style="margin:0px">Developer</h3>
 
                     <p style="font-size:16px;">
-                      Josh is a second year studying Computer Science/Cyber Operations.
-                      He hopes to leverage his experience managing both small and large clubs at Northeastern to
-                      create a useful platform for all students!  Josh is developing much of the Parade front end,
-                      building some back end, and tackling side projects (such as this website).
+                      Josh is studying Computer Science/Cyber Operations and recently completed a co-op at
+                      Virtual Security Research (VSR). He hopes to leverage his experience managing Northeastern clubs
+                      to create a useful platform for all students! Josh is involved in product development and
+                      deployment.
                   </p>
                     </div>
                 </div>
@@ -229,7 +229,7 @@
                   <h3 style="margin:0px">Outreach</h3>
 
                   <p style="font-size:16px;">
-                    Kathleen is a second-year pharmacy student currently on co-op in Cape Cod.
+                    Kathleen is a third year Pharmacy student currently on co-op in Cape Cod.
                     Kathleen works on communication and outreach initiatives for Parade,
                     utilizing connections with SGA and Northeastern to help promote and improve the app.
                   </p>
@@ -252,9 +252,9 @@
                         <h3 style="margin:0px">Designer</h3>
 
                         <p style="font-size:16px;">
-                          Pranita is a second year Interaction Design student, as well as a freelance graphic designer.
+                          Pranita is a third year Interaction Design student, as well as a freelance graphic designer.
                           She works as Parade’s UI/UX designer, ensuring both that the application’s interface is aesthetically
-                          pleasing and that users have positive experiences.
+                          pleasing and that users have positive experiences. She is currently on co-op in Boston at LevelUp.
                         </p>
                         </div>
 
@@ -275,7 +275,7 @@
 
               <h2 style="font-size: 50px;margin-bottom:15px">Looking for a Project?</h2>
               <p style="font-size:20px;margin-top:0px">
-                  Are you a Northeastern student interested in joining the Parade <b>dev</b> team?
+                  Are you a Northeastern student interested in joining the Parade team?
                   <br><a href="mailto:outreach@parade.events"><strong>Reach out!</strong></a>
               </p>
 
@@ -285,6 +285,7 @@
                 Join our mailing list for beta testing opportunities,
                 and to hear more Parade related news!
               </p>
+
 
               <!-- Begin MailChimp Signup Form -->
   <style type="text/css">
@@ -329,6 +330,9 @@
           </div>
 
     </div>
+
+
+
 
             <!--- START FOURTH PANEL -->
             <div id="Footer" class="fourthPanel">
