--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
       </li>
       <li class="li complete">
         <div class="timestamp">
-          <span class="author">Beta Phase/Invite Orgs to Join</span>
+          <span class="author">Beta Phase/Invite Orgs</span>
         </div>
         <div class="status">
           <h4>Late Summer</h4>
