added jekyll redirect git pu

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <link href="https://cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
   <head>
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <meta name="description" content="An Events app for Northeastern University clubs. Available soon on Android and iOS.">
-      <meta name="keywords" content="aoun,iOS,Android,iPhone,App Store,Parade,Northeastern,RSVP,NU,NEU,events,clubs,students,student organizations,student orgs,Northeastern University,Boston,MA,app,application,calendar,events calendar,SGA,university,CS,discover,study">
+      <meta name="description" content="An Event Discovery app for Northeastern University clubs and student organizations. Available on Android (soon), iPhone, and iPad.">
+      <meta name="keywords" content="aoun,iOS,Android,iPhone,App Store,Parade,Northeastern,RSVP,NU,NEU,events,clubs,students,student organizations,student orgs,Northeastern University,Boston,MA,app,application,calendar,events calendar,SGA,university,CS,discover,study,huskies">
       <meta name="author" content="Josh Spicer,Carter Tune">
       <!-- Favicon -->
       <link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png">
@@ -80,7 +80,7 @@
               <h2 class="prettyFontColor" style="font-size:60px;margin-bottom:25px">Meet Parade.</h2>
                 <p class='mainDescription'>
               Parade is the platform for event discovery.  Parade is designed by Northeastern students,
-              for Northeastern students, to communicate what’s happening on campus.  The app allows student organizations
+              for Northeastern students, to communicate what’s happening on campus.  The app allows student organizations (orgs)
               to advertise their events, and for students to discover them. Keep up with what's going on in your favorite clubs,
               see who else has RSVP'd, and find new clubs and events that align with your interests.
                </p>
