added welcome post link to 404

--- a/404.html
+++ b/404.html
@@ -64,6 +64,7 @@
   <p>The link you're trying to reach likely <strong>requires the Parade app</strong> (available for iOS and Android).</p>
   <p>Try this link again on your smartphone  <strong>after</strong> logging into Parade!</p>
   <p><a href="https://parade.events/"> << Go home</a></p>
+    <p><a href="https://parade.events/blog/welcome-guide"> Read the Welcome Guide >></a></p>
 </div>
 
       </div>
